- Added tenant base controller to manage user flow after they login - Added controller for managing posts - Added Pundit gem for authorization

--- a/app/views/layouts/tenant.html.erb
+++ b/app/views/layouts/tenant.html.erb
@@ -19,7 +19,10 @@
   </head>
 
   <body>
-    <% flash[:alert] %>
-    <%= yield %>
+    <%= render partial: "common/header" %>
+    <div class="main-body">
+      <% flash[:alert] %>
+      <%= yield %>
+    </div>
   </body>
 </html>
