--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+
+.header {
+  display: inline-block;
+  width: 100%;
+}
+
+.header .h-left{
+  float: left;
+}
+
+.header .h-right{
+  float: right;
+  display: flex;
+}
+
+.main-body {
+  width: 1200px;
+  margin: 0 auto;
+  border: 1px solid #aeaeae;
+  min-height: 400px;
+  padding: 15px;
+}
+
